[package]
name = "mork-mm"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mork-hal = { path = "../mork-hal" }
mork-common = { path = "../../mork-common" }
mork-capability = { path = "../mork-capability" }
log = "0.4"
lazy_init = { git = "https://github.com/Starry-OS/lazy_init.git" }
buddy_system_allocator = "0.11"
spin = "0.9.8"